[package]
name = "bevy_reactive_font"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"

[dependencies.bevy]
version = "0.17.1"
default-features = false
features = [ 
  "bevy_color", 
  "bevy_asset", 
  "bevy_text", 
  "bevy_ui",
]

[dev-dependencies.bevy]
version = "0.17.1"
features = [
    "bevy_window", 
    "bevy_winit", 
    "multi_threaded", 
    "x11"
]
